--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-# Ignore log files
-*.log
+# Ignore Python cache files
+__pycache__/
+*.pyc
+.venv/
 
-# Ignore node_modules
-node_modules/
-
-# Ignore environment files
-.env
+# Ignore system files
+.DS_Store
+Thumbs.db
